# legal_ai_agent

./: .coverage  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli.py  create_tables.py  docker-compose.vault.yml  docker-compose.yml  full_code_dump.txt  ingest.py  ingest_acts.py  ingest_consultations.py  ingest_decisions.py  local.db  mkdocs.yml  mypy.ini  prozorro_loader.py  pyproject.toml  requirements-dev.txt  requirements.txt  search.py  setup.py  start.sh  tree.py
.github/workflows/: ci.yml
agent/: core.py
app/: __init__.py  config.py  document_generator.py  document_loader.py  embedder.py  export_utils.py  full_analysis.py  llm_agent.py  logging_config.py  metrics.py  settings.py  sign_extractor.py  signature_extractor.py  signature_reader.py  text_splitter.py  vector_store.py
db/: __init__.py  init_db.py  legal_agent.db  schema.py
docs/: ci_cd.md  deployment.md  dev_setup.md  index.md  quickstart.md  testing.md
ingest/: acts.py  consultations.py  decisions.py  loader.py  tenders.py
interface/: prozorro_loader.py  streamlit_app.py
keycloak/: docker-compose.yml
legal_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
monitoring/: alertmanager.yml  alerts.rules.yml  prometheus.yml  vault-agent.hcl
scripts/: backup.sh  smoke_test.ps1
services/: app.py
site/: 404.html  index.html
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
tests/: conftest.py  test_document_loader.py  test_embedder.py  test_integration.py  test_metrics.py  test_rag_engine.py  test_text_splitter.py
(+38 files in other folders)
